--- a/app/src/main/res/layout/activity_lists.xml
+++ b/app/src/main/res/layout/activity_lists.xml
@@ -4,17 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Active2">
+    tools:context=".Lists">
 
-    <TextView
-        android:id="@+id/cprog"
-        android:layout_width="307dp"
-        android:layout_height="360dp"
-        android:text="C Program"
+    <ListView
+        android:id="@+id/mine"
+        android:layout_width="298dp"
+        android:layout_height="420dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.682"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.614" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
